# ThunderTools

./: .gitignore  CMakeLists.txt  README.md
.github/openspec/: config.yaml
.github/workflows/: Build ThunderClientLibraries on Windows.yml  Build ThunderTools on Linux.yml  Build ThunderTools on MacOS.yml  Build ThunderTools on Windows.yml  JsonGenerator.yml  LuaGenerator.yml  PluginSkeletonGenerator.yml  ProxyStubFunctionalTests.yml  ProxyStubGenerator.yml
ConfigGenerator/: config_compare.py  config_generator.py  json_helper.py  params.config
DocumentGenerator/: DocumentGenerator.py  requirements.txt
JsonGenerator/: GenerateDocs.bat  GenerateDocs.sh  IBuiltIns.h  JsonGenerator.py  ThunderReleaseNotes_R5.3.md  docs_common.json  global.json
JsonGenerator/source/: class_emitter.py  code_generator.py  config.py  documentation_generator.py  emitter.py  header_loader.py  json_loader.py  rpc_emitter.py  trackers.py
LuaGenerator/: GenerateLua.bat  GenerateLua.sh
PluginGenerator/: blueprint_data.py  generator.py  helper.py  plugin.txt
PluginGenerator/HelloWorld/: HelloWorld.cpp  HelloWorld.h  Module.cpp  Module.h
PluginGenerator/templates/: cmake.txt  module_cpp_file.txt  module_header_template.txt  plugin.conf.in  plugin_cmake.txt  plugin_header.txt  plugin_header_template.txt  plugin_implementation.txt  plugin_source.txt  plugin_source_template.txt
PluginQualityAdvisor/: README.md  setup-prompts.py
PluginQualityAdvisor/Prompts/: thunder-generate-plugin.prompt.md  thunder-interface-review.prompt.md  thunder-interface-rule-manager.prompt.md  thunder-plugin-review.prompt.md  thunder-plugin-rule-manager.prompt.md
PluginQualityAdvisor/Update-Template-Guide/: interface-rule-template-guide.md  plugin-rule-template-guide.md
PluginQualityAdvisor/rules/: thunder-interface-rules.yaml  thunder-plugin-rules.yaml
PluginSkeletonGenerator/: .gitignore  CombinedPlugins.sh  Config.yaml  PluginSkeletonGenerator.py  README.md  example.h  example2.h  file_data.py  generator.py  global_variables.py  help.txt  helper.py  index.html  menu.py  utils.py
ProxyStubGenerator/: CppParser.py  Interface.py  Log.py  StubGenerator.py  __init__.py  default.h
ThunderDevTools/: ThunderDev.py  ThunderDevTools.py
binalyzer/: README  binalyzer
cmake/: FindConfigGenerator.cmake.in  FindJsonGenerator.cmake.in  FindProxyStubGenerator.cmake.in
tests/: CMakeLists.txt  README.md
tests/FunctionalTests/: CMakeLists.txt  README.md
tests/FunctionalTests/common/: CMakeLists.txt  HeaderModel.h.in  JsonRpcRegistrations.cpp.in  Module.cpp
tests/FunctionalTests/common/implementations/: TestAnnotationEventsImpl.cpp  TestAnnotationsImpl.cpp  TestAsyncImpl.cpp  TestBuffersImpl.cpp  TestEncodingMacImpl.cpp  TestEnumsImpl.cpp  TestEventsImpl.cpp  TestExtendedFormatImpl.cpp  TestInterfacesImpl.cpp  TestIteratorsImpl.cpp  TestJsonCompliantImpl.cpp  TestJsonFormattingImpl.cpp  TestJsonShapeImpl.cpp  TestJsonTextCaseImpl.cpp  TestJsonTextKeepImpl.cpp  TestJsonUncompliantCollapsedImpl.cpp  TestJsonUncompliantExtendedImpl.cpp  TestLengthModesImpl.cpp  TestOptionalsImpl.cpp  TestPrefixUnderscoreImpl.cpp  TestPrimitivesImpl.cpp  TestRestrictionsImpl.cpp  TestStructsImpl.cpp  TestWrappedInterfaceImpl.cpp
tests/FunctionalTests/common/include/: ImplementationFactory.h  JsonRpcRegistrations.h  Module.h
tests/FunctionalTests/common/interfaces/: ITestAnnotationEvents.h  ITestAnnotations.h  ITestAsync.h  ITestEncodingMac.h  ITestEvents.h  ITestExtendedFormat.h  ITestInterfaces.h  ITestIterators.h  ITestJsonCompliant.h  ITestJsonFormatting.h  ITestJsonShape.h  ITestJsonTextCase.h  ITestJsonTextKeep.h  ITestJsonUncompliantCollapsed.h  ITestJsonUncompliantExtended.h  ITestLengthModes.h  ITestOptionals.h  ITestPrefixUnderscore.h  ITestStructs.h  ITestWrappedInterface.h  Ids.h  README.md  definitions.h
tests/FunctionalTests/comrpc/: CMakeLists.txt  ComRpcServer.h  Main.cpp  Module.h  SocketConfig.h  TestHarness.h
tests/FunctionalTests/comrpc/tests/: TestAnnotationEvents.cpp  TestAnnotations.cpp  TestAsync.cpp  TestBuffers.cpp  TestEncodingMac.cpp  TestEnums.cpp  TestEvents.cpp  TestExtendedFormat.cpp  TestInterfaces.cpp  TestIterators.cpp  TestJsonCompliant.cpp  TestJsonFormatting.cpp  TestJsonShape.cpp  TestJsonTextCase.cpp  TestJsonTextKeep.cpp  TestJsonUncompliantCollapsed.cpp  TestJsonUncompliantExtended.cpp  TestLengthModes.cpp  TestOptionals.cpp  TestPrimitives.cpp  TestRestrictions.cpp  TestStructs.cpp
tests/FunctionalTests/jsonrpc/: CMakeLists.txt  JsonRpcServer.cpp  JsonRpcServer.h  JsonRpcTestHarness.h  Main.cpp  MockShell.h  Module.h
tests/FunctionalTests/jsonrpc/tests/: TestAnnotationsEventsJsonRpc.cpp  TestAnnotationsJsonRpc.cpp  TestAsyncJsonRpc.cpp  TestEncodingMacJsonRpc.cpp  TestEnumsJsonRpc.cpp  TestExtendedFormatJsonRpc.cpp  TestJsonCompliantJsonRpc.cpp  TestJsonFormattingJsonRpc.cpp  TestJsonShapeJsonRpc.cpp  TestJsonTextCaseJsonRpc.cpp  TestJsonTextKeepJsonRpc.cpp  TestJsonUncompliantCollapsedJsonRpc.cpp  TestJsonUncompliantExtendedJsonRpc.cpp  TestLengthModesJsonRpc.cpp  TestPrefixUnderscoreJsonRpc.cpp  TestPrimitivesJsonRpc.cpp  TestRestrictionsJsonRpc.cpp  TestStructsJsonRpc.cpp  TestVersioningJsonRpc.cpp  TestWrappedInterfaceJsonRpc.cpp
tests/interfaces/: ITestAsync.h  ITestBuffers.h  ITestEnums.h  ITestOptionals.h  ITestPrimitives.h  ITestRestrictions.h  README.md
tests/src/: ComRpcServer.h  JsonRpcInterfaces.h.in  JsonRpcServer.h  JsonRpcTestHarness.h  Main.cpp  Module.cpp  Module.h  TestHarness.h  TestRegistry.h
tests/src/implementations/: TestAsyncImpl.cpp  TestBuffersImpl.cpp  TestEnumsImpl.cpp  TestEventsImpl.cpp  TestInterfacesImpl.cpp  TestIteratorsImpl.cpp  TestOptionalsImpl.cpp  TestPrimitivesImpl.cpp  TestRestrictionsImpl.cpp  TestStructsImpl.cpp
tests/src/tests/: TestAsync.cpp  TestBuffers.cpp  TestEnums.cpp  TestEnumsJsonRpc.cpp  TestEvents.cpp  TestIterators.cpp  TestOptionals.cpp  TestPrimitives.cpp  TestPrimitivesJsonRpc.cpp  TestRestrictions.cpp  TestRestrictionsJsonRpc.cpp  TestStructs.cpp  TestStructsJsonRpc.cpp  TestVersioningJsonRpc.cpp
(+644 files in other folders)
